# continual-robot-simulation

./: .gitignore  README.md  pyproject.toml
docs/: continualworld.md  experiment_plan.md  libero.md
scripts/: run_quickstart.ps1  run_quickstart.sh
src/continual_robot_sim/: __init__.py  data.py  envs.py  evaluate.py  models.py  reporting.py  run_demo.py  tasks.py  trainers.py  visualize.py
tests/: test_env.py  test_smoke.py
