[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continual-robot-simulation"
version = "0.1.0"
description = "A lightweight robot continual-learning simulator with finetuning, replay, and EWC baselines."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "lucaznguyen" }]
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
